--- a/index.html
+++ b/index.html
@@ -1,44 +1,15 @@
-<!DOCTYPE html> 
-<html> 
-    <head> 
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title></title> 
-    <link rel="stylesheet" href="js/jquery.mobile-1.0.min.css" />
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-	<script src="js/jquery.mobile-1.0.min.js"></script>
-    <script src="js/main.js"></script>
-</head> 
-<body> 
+<html>
+<body>
 
-<div data-role="page" id="mainPage">
-
-    <div data-role="header">
-        <h1></h1>
-    </div>
-
-    <div data-role="content">  
-		<div id="status"></div>  
-        <ul id="linksList" data-role="listview" data-inset="true"></ul>
-    </div>
-
-    <div data-role="footer">
-        <h4>SimpleBlog by Raymond Camden</h4>
-    </div>
-
-    
+<div class='header'><h1>Home</h1></div>
+<div class='search-view'>
+<input class='search-key' type="text"/>
+<ul class='employee-list'></ul>
 </div>
 
-<div data-role="page" id="contentPage">
-
-    <div data-role="header">
-        <a href="#mainPage" data-rel="back">Home</a>
-        <h1></h1>
-    </div>
-
-    <div data-role="content" id="entryText">
-    </div>
-        
-</div>
+<script src="lib/jquery-1.8.2.min.js"></script>
+<script src="js/storage/memory-store.js"></script>
+<script src="js/main.js"></script>
 
 </body>
 </html>
