--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
+<!DOCTYPE html>
 <html>
+<head>
+<title>Employee Directory</title>
+<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"/>
+<link rel="stylesheet" href="css/styles.css"/>
+</head>
+
 <body>
 
-<div class='header'><h1>Home</h1></div>
-<div class='search-view'>
-<input class='search-key' type="text"/>
-<ul class='employee-list'></ul>
-</div>
+<div id="content"></div>
 
-<script src="lib/jquery-1.8.2.min.js"></script>
-<script src="js/storage/memory-store.js"></script>
-<script src="js/main.js"></script>
+<!-- Scripts -->
+<script type="text/javascript" src="libs/cordova-1.7.0.js"></script>
+<script type="text/javascript" src="libs/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="libs/underscore-min.js"></script>
+<script type="text/javascript" src="libs/backbone-min.js"></script>
+<script type="text/javascript" src="libs/iscroll.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/utils.js"></script>
+<script type="text/javascript" src="js/dao.js"></script>
+<script type="text/javascript" src="js/models.js"></script>
+<script type="text/javascript" src="js/views.js"></script>
 
 </body>
 </html>
