--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<p class="blog"><a data-role="button" data-theme="b" data-icon="star" data-mini="true">BLOG7</a></p>
 		</div>
 		
-		<div data-role="panel" id="panelOptions" data-theme="b" data-display="reveal" data-position="left">
+		<div data-role="panel" id="panelMore" data-theme="b" data-display="reveal" data-position="left">
 			<p><a href="#panelMore" data-role="button" data-theme="a" data-icon="back" data-mini="true" id="closePanel">close</a></p>
 			<p class="blog"><a data-role="button" data-theme="b" data-icon="star" data-mini="true">BLOG5</a></p>
 			<p class="blog"><a data-role="button" data-theme="b" data-icon="star" data-mini="true">BLOG6</a></p>
