--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		console.log(alto_ventana);
 		
 		$("#flipBlog1").flip({
-			height: alto_ventana,
+			height: "889px",
 		});
 		
 		$(window).bind("orientationchange", function(event){            
