--- a/indexResponsive.html
+++ b/indexResponsive.html
@@ -6,7 +6,7 @@
 <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile.flip.css" />
-<link rel="stylesheet" type="text/css" href="css/layout.css">
+<link rel="stylesheet" type="text/css" href="css/layoutResponsive.css">
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile.theme-1.3.0.css">
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile.structure-1.3.0.css">
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.3.0.css">
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-<div id="home" data-role="page" style="height:1024px;">
+<div id="home" data-role="page">
 		
 		<div data-role="panel" id="panelMore" data-theme="none" data-display="overlay" data-position="right" class="customPanel" data-position-fixed="true">
 		
