--- a/indexResponsive.html
+++ b/indexResponsive.html
@@ -154,7 +154,7 @@
 			<div class="contentTit">Content</div>
 		</div>
 		
-		<div data-role="content" class="contenti">
+		<div data-role="content" class="}">
 			<div class="ui-grid-a">
 				<div class="ui-block-a blog" id="blog1">
 					<a href="#blog1-page" data-transition="slide">
