--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Kaspersky Mobile</title>
 <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+<meta content='width=device-width, initial-scale = 2.3, maximum-scale=1.0, user-scalable=no' name='viewport' />
 
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile.flip.css" />
 <link rel="stylesheet" type="text/css" href="css/layout.css">
@@ -827,7 +828,7 @@ official blog
 		
 		<div data-role="content" data-theme="c">
  			
-      <div id="flipBlog1" data-role="flip" data-flip-show-pager="false" data-flip-forward-dir="rtol" data-flip-keyboard-nav="true" data-flip-height="" >
+      <div id="flipBlog2" data-role="flip" data-flip-show-pager="false" data-flip-forward-dir="rtol" data-flip-keyboard-nav="true" data-flip-height="" >
 			<!--page1-->
 			<div class="p" id="blog1-page1">
 				<div class="contenedorNotas">
