--- a/indexResponsive.html
+++ b/indexResponsive.html
@@ -154,45 +154,45 @@
 			<div class="contentTit">Content</div>
 		</div>
 		
-		<div data-role="content" class="}">
+		<div data-role="content" class="contenti">
 			<div class="ui-grid-a">
 				<div class="ui-block-a blog" id="blog1">
 					<a href="#blog1-page" data-transition="slide">
-						<div>
-								<img src="images/app_07.jpg" style="border: 12px solid #fff;">
+						<div class="bloque">
+								<img src="images/app_07.jpg">
 								<div class="tituloBlog">
-									kaspersky lab<br>
-official blog
+									<p>kaspersky lab<br>
+official blog</p>
 								</div>
 						</div>
 					</a>
 				</div>
 				<div class="ui-block-b blog" id="blog2">
 					<a href="#blog2-page" data-transition="slide">
-						<div>
-								<img src="images/app_03.jpg" style="border: 12px solid #fff;">
+						<div class="bloque">
+								<img src="images/app_03.jpg">
 								<div class="tituloBlog">
-									Nota bene
+									<p>Nota bene</p>
 								</div>
 						</div>
 					</a>
 				</div>
 				<div class="ui-block-a blog" id="blog3">
 					<a href="#blog3-page" data-transition="slide" id="pinchTest">
-						<div>
-								<img src="images/app_10.jpg" style="border: 12px solid #fff;">
+						<div class="bloque">
+								<img src="images/app_10.jpg">
 								<div class="tituloBlog">
-									threat post
+									<p>threat post</p>
 								</div>
 						</div>
 					</a>
 				</div>
 				<div class="ui-block-b blog" id="blog4">
 					<a href="#blog4-page" data-transition="slide">
-						<div>
-								<img src="images/app_13.jpg" style="border: 12px solid #fff;">
+						<div class="bloque">
+								<img src="images/app_13.jpg">
 								<div class="tituloBlog">
-									secure list
+									<p>secure list</p>
 								</div>
 						</div>
 					</a>
