--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div id="home" data-role="page">
 		
-		<div data-role="panel" id="panelMore" data-theme="none" data-display="overlay" data-position="right" class="customPanel" data-position-fixed="true">
+		<div data-role="panel" id="panelMore" data-theme="none" data-display="overlay" data-position="right" class="customPanel">
 		
 			<div class="close"><a href="#panelMore" data-mini="true" id="closePanel"><img src="images/close.jpg"> close</a></div>
 			<div class="clear"></div>
@@ -52,7 +52,7 @@
 			
 		</div>
 		
-		<div data-role="panel" id="panelOptions" data-theme="c" data-display="reveal" data-position="left" data-position-fixed="true">
+		<div data-role="panel" id="panelOptions" data-theme="c" data-display="reveal" data-position="left">
 			<div class="closeRight"><a href="#panelOptions" data-mini="true" id="closePanel">close <img src="images/close.jpg"></a></div>
 			<div class="clear"></div>
 			<div class="contenedorBlogMore custom" style="margin-top:20px; margin-left:10px;">
