FIX CONFIG IPAD

--- a/indexResponsive.html
+++ b/indexResponsive.html
@@ -4,7 +4,6 @@
 <meta charset="utf-8">
 <title>Kaspersky Mobile</title>
 <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile.flip.css" />
 <link rel="stylesheet" type="text/css" href="css/layoutResponsive.css">
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile.theme-1.3.0.css">
@@ -52,7 +51,7 @@
 			
 		</div>
 		
-		<div data-role="panel" id="panelOptions" data-theme="c" data-display="reveal" data-position="left">
+		<div data-role="panel" id="panelOptions" data-theme="c" data-display="overlay" data-position="left">
 			<div class="closeRight"><a href="#panelOptions" data-mini="true" id="closePanel">close <img src="images/close.jpg"></a></div>
 			<div class="clear"></div>
 			<div class="contenedorBlogMore custom" style="margin-top:20px; margin-left:10px;">
@@ -221,9 +220,9 @@ official blog</p>
 <!---blog1-paginas--->
 <div data-role="page" id="blog1-page">
 	<div class="header" style="position:relative; z-index:11" id="headerBlog">
-		<div style="margin:auto; width:768px;">
+		<div class="contenti">
 		<div class="logo">
-					<a href="#home" data-transition="slide" data-direction="reverse"><img src="images/logoInterno.png" height="31" width="143" alt="kaspersky"></a>	
+					<a href="#home" data-transition="slide" data-direction="reverse"><img src="images/logoInterno.png" height="25" width="124" alt="kaspersky"></a>	
 		</div>
 		
 		<div class="menu">
@@ -792,8 +791,8 @@ official blog</p>
 		</div>
 		
 		<div data-role="footer" data-theme="c">
-			<div style="width:768px; margin:auto;">
-				<div style="width:75%; margin:auto;">
+			<div class="contenti">
+				<div style="width:75%; margin:auto;margin-top: -7px;padding-bottom: 5px;">
     				<p>
     					<input type="range" name="slider-4" id="slider-4" data-mini="true" min="1"  value="1" />
    					</p>
