--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <meta charset="utf-8">
 <title>Kaspersky Mobile</title>
 <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+<meta content='width=device-width, initial-scale = 2.3, maximum-scale=1.0, user-scalable=no' name='viewport' />
 
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile.flip.css" />
-<link rel="stylesheet" type="text/css" href="css/layoutResponsive.css">
+<link rel="stylesheet" type="text/css" href="css/layout.css">
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile.theme-1.3.0.css">
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile.structure-1.3.0.css">
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.3.0.css">
@@ -23,9 +24,9 @@
 </head>
 <body>
 
-<div id="home" data-role="page">
+<div id="home" data-role="page" style="height:1024px;">
 		
-		<div data-role="panel" id="panelMore" data-theme="none" data-display="overlay" data-position="right" class="customPanel">
+		<div data-role="panel" id="panelMore" data-theme="none" data-display="overlay" data-position="right" class="customPanel" data-position-fixed="true">
 		
 			<div class="close"><a href="#panelMore" data-mini="true" id="closePanel"><img src="images/close.jpg"> close</a></div>
 			<div class="clear"></div>
@@ -52,7 +53,7 @@
 			
 		</div>
 		
-		<div data-role="panel" id="panelOptions" data-theme="c" data-display="reveal" data-position="left">
+		<div data-role="panel" id="panelOptions" data-theme="c" data-display="reveal" data-position="left" data-position-fixed="true">
 			<div class="closeRight"><a href="#panelOptions" data-mini="true" id="closePanel">close <img src="images/close.jpg"></a></div>
 			<div class="clear"></div>
 			<div class="contenedorBlogMore custom" style="margin-top:20px; margin-left:10px;">
@@ -158,41 +159,41 @@
 			<div class="ui-grid-a">
 				<div class="ui-block-a blog" id="blog1">
 					<a href="#blog1-page" data-transition="slide">
-						<div class="bloque">
-								<img src="images/app_07.jpg">
+						<div>
+								<img src="images/app_07.jpg" style="border: 12px solid #fff;">
 								<div class="tituloBlog">
-									<p>kaspersky lab<br>
-official blog</p>
+									kaspersky lab<br>
+official blog
 								</div>
 						</div>
 					</a>
 				</div>
 				<div class="ui-block-b blog" id="blog2">
 					<a href="#blog2-page" data-transition="slide">
-						<div class="bloque">
-								<img src="images/app_03.jpg">
+						<div>
+								<img src="images/app_03.jpg" style="border: 12px solid #fff;">
 								<div class="tituloBlog">
-									<p>Nota bene</p>
+									Nota bene
 								</div>
 						</div>
 					</a>
 				</div>
 				<div class="ui-block-a blog" id="blog3">
 					<a href="#blog3-page" data-transition="slide" id="pinchTest">
-						<div class="bloque">
-								<img src="images/app_10.jpg">
+						<div>
+								<img src="images/app_10.jpg" style="border: 12px solid #fff;">
 								<div class="tituloBlog">
-									<p>threat post</p>
+									threat post
 								</div>
 						</div>
 					</a>
 				</div>
 				<div class="ui-block-b blog" id="blog4">
 					<a href="#blog4-page" data-transition="slide">
-						<div class="bloque">
-								<img src="images/app_13.jpg">
+						<div>
+								<img src="images/app_13.jpg" style="border: 12px solid #fff;">
 								<div class="tituloBlog">
-									<p>secure list</p>
+									secure list
 								</div>
 						</div>
 					</a>
@@ -827,7 +828,7 @@ official blog</p>
 		
 		<div data-role="content" data-theme="c">
  			
-      <div id="flipBlog1" data-role="flip" data-flip-show-pager="false" data-flip-forward-dir="rtol" data-flip-keyboard-nav="true" data-flip-height="" >
+      <div id="flipBlog2" data-role="flip" data-flip-show-pager="false" data-flip-forward-dir="rtol" data-flip-keyboard-nav="true" data-flip-height="" >
 			<!--page1-->
 			<div class="p" id="blog1-page1">
 				<div class="contenedorNotas">
