--- a/indexResponsive.html
+++ b/indexResponsive.html
@@ -51,7 +51,7 @@
 			
 		</div>
 		
-		<div data-role="panel" id="panelOptions" data-theme="c" data-display="overlay" data-position="left">
+		<div data-role="panel" id="panelOptions" data-theme="c" data-display="overlay" data-position="left" data-swipe-close="false">
 			<div class="closeRight"><a href="#panelOptions" data-mini="true" id="closePanel">close <img src="images/close.jpg"></a></div>
 			<div class="clear"></div>
 			<div class="contenedorBlogMore custom" style="margin-top:20px; margin-left:10px;">
