--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 <meta charset="utf-8">
 <title>Kaspersky Mobile</title>
 <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-<meta content='width=device-width, initial-scale = 2.3, maximum-scale=1.0, user-scalable=no' name='viewport' />
-
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile.flip.css" />
-<link rel="stylesheet" type="text/css" href="css/layout.css">
+<link rel="stylesheet" type="text/css" href="css/layoutResponsive.css">
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile.theme-1.3.0.css">
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile.structure-1.3.0.css">
 <link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.3.0.css">
@@ -24,9 +22,9 @@
 </head>
 <body>
 
-<div id="home" data-role="page" style="height:1024px;">
+<div id="home" data-role="page">
 		
-		<div data-role="panel" id="panelMore" data-theme="none" data-display="overlay" data-position="right" class="customPanel" data-position-fixed="true">
+		<div data-role="panel" id="panelMore" data-theme="none" data-display="overlay" data-position="right" class="customPanel">
 		
 			<div class="close"><a href="#panelMore" data-mini="true" id="closePanel"><img src="images/close.jpg"> close</a></div>
 			<div class="clear"></div>
@@ -53,7 +51,7 @@
 			
 		</div>
 		
-		<div data-role="panel" id="panelOptions" data-theme="c" data-display="reveal" data-position="left" data-position-fixed="true">
+		<div data-role="panel" id="panelOptions" data-theme="c" data-display="overlay" data-position="left" data-swipe-close="false">
 			<div class="closeRight"><a href="#panelOptions" data-mini="true" id="closePanel">close <img src="images/close.jpg"></a></div>
 			<div class="clear"></div>
 			<div class="contenedorBlogMore custom" style="margin-top:20px; margin-left:10px;">
@@ -159,41 +157,41 @@
 			<div class="ui-grid-a">
 				<div class="ui-block-a blog" id="blog1">
 					<a href="#blog1-page" data-transition="slide">
-						<div>
-								<img src="images/app_07.jpg" style="border: 12px solid #fff;">
+						<div class="bloque">
+								<img src="images/app_07.jpg">
 								<div class="tituloBlog">
-									kaspersky lab<br>
-official blog
+									<p>kaspersky lab<br>
+official blog</p>
 								</div>
 						</div>
 					</a>
 				</div>
 				<div class="ui-block-b blog" id="blog2">
 					<a href="#blog2-page" data-transition="slide">
-						<div>
-								<img src="images/app_03.jpg" style="border: 12px solid #fff;">
+						<div class="bloque">
+								<img src="images/app_03.jpg">
 								<div class="tituloBlog">
-									Nota bene
+									<p>Nota bene</p>
 								</div>
 						</div>
 					</a>
 				</div>
 				<div class="ui-block-a blog" id="blog3">
 					<a href="#blog3-page" data-transition="slide" id="pinchTest">
-						<div>
-								<img src="images/app_10.jpg" style="border: 12px solid #fff;">
+						<div class="bloque">
+								<img src="images/app_10.jpg">
 								<div class="tituloBlog">
-									threat post
+									<p>threat post</p>
 								</div>
 						</div>
 					</a>
 				</div>
 				<div class="ui-block-b blog" id="blog4">
 					<a href="#blog4-page" data-transition="slide">
-						<div>
-								<img src="images/app_13.jpg" style="border: 12px solid #fff;">
+						<div class="bloque">
+								<img src="images/app_13.jpg">
 								<div class="tituloBlog">
-									secure list
+									<p>secure list</p>
 								</div>
 						</div>
 					</a>
@@ -222,9 +220,9 @@ official blog
 <!---blog1-paginas--->
 <div data-role="page" id="blog1-page">
 	<div class="header" style="position:relative; z-index:11" id="headerBlog">
-		<div style="margin:auto; width:768px;">
+		<div class="contenti">
 		<div class="logo">
-					<a href="#home" data-transition="slide" data-direction="reverse"><img src="images/logoInterno.png" height="31" width="143" alt="kaspersky"></a>	
+					<a href="#home" data-transition="slide" data-direction="reverse"><img src="images/logoInterno.png" height="25" width="124" alt="kaspersky"></a>	
 		</div>
 		
 		<div class="menu">
@@ -793,8 +791,8 @@ official blog
 		</div>
 		
 		<div data-role="footer" data-theme="c">
-			<div style="width:768px; margin:auto;">
-				<div style="width:75%; margin:auto;">
+			<div class="contenti">
+				<div style="width:75%; margin:auto;margin-top: -7px;padding-bottom: 5px;">
     				<p>
     					<input type="range" name="slider-4" id="slider-4" data-mini="true" min="1"  value="1" />
    					</p>
@@ -828,7 +826,7 @@ official blog
 		
 		<div data-role="content" data-theme="c">
  			
-      <div id="flipBlog2" data-role="flip" data-flip-show-pager="false" data-flip-forward-dir="rtol" data-flip-keyboard-nav="true" data-flip-height="" >
+      <div id="flipBlog1" data-role="flip" data-flip-show-pager="false" data-flip-forward-dir="rtol" data-flip-keyboard-nav="true" data-flip-height="" >
 			<!--page1-->
 			<div class="p" id="blog1-page1">
 				<div class="contenedorNotas">
