--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ official blog</p>
 					<div class="notaPrincipal">
 					
 						<div class="imagen">
-								<img src="images/imagenPrincipal.jpg" height="338" width="725" alt="nota1" class="imagenNotaPrincipal">
+								<img src="images/imagenPrincipal.jpg" alt="nota1" class="imagenNotaPrincipal">
 								<div class="titulo">
 									MWC 2013: SECURING MOBILE BUSINESS
 								</div>
