--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@ official blog</p>
 		
 		<div data-role="content" data-theme="c">
  			
-      <div id="flipBlog1" data-role="flip" data-flip-show-pager="false" data-flip-forward-dir="rtol" data-flip-keyboard-nav="true" >
+      <div id="flipBlog2" data-role="flip" data-flip-show-pager="false" data-flip-forward-dir="rtol" data-flip-keyboard-nav="true"  data-flip-height=""  >
 			<!--page1-->
 			<div class="p" id="blog1-page1">
 				<div class="contenedorNotas">
