--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 			<div class="logoHome">
 				<img src="images/logo.png" width="250">
 			</div>
-			<div class="contentTit">Content</div>
+			<div class="contentTit" id="boxTitContent">Content</div>
 		</div>
 		
 		<div data-role="content" class="contenti">
@@ -236,7 +236,7 @@ official blog</p>
 			</div>
 		</div>
 		
-		<div data-role="footer" data-theme="none" >
+		<div data-role="footer" data-theme="none" id="boxFooter" >
 			<div class="contenti footerMargin">
 				<div style="margin-right:8px; float:left;"><a href="#panelOptions" data-rel="panel"><img src="images/app_18.jpg"></a></div>
 				<div style="text-align:center;" id="cantidad"></div>
