--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 		
 		<div data-role="popup" id="popupAdd" data-theme="c">
-			 <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
+			 <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right" id="closeBtn">Close</a>
 			 <div data-role="fieldcontain" class="popAdd">
 			 	<label for="textinput" style="margin-top:5px;width: 100%;"> RSS URL:</label><input type="text" name="textinput" id="textinput" value="" /><button data-theme="d" data-mini="true" data-inline="true">Add</button>
 			 
@@ -829,7 +829,7 @@ official blog</p>
 
 	 
  <div data-role="popup" id="popupSelcBlog" data-theme="d" data-corners="false">
-			<ul data-role="listview" data-inset="true" style="min-width:210px;" data-theme="d" data-corners="false">
+			<ul data-role="listview" data-inset="true" style="min-width:210px;" data-theme="d" data-corners="false" data-icon="custom">
 					<li><a href="#">BLOG 2</a></li>
 					<li><a href="#">BLOG 3</a></li>
 					<li><a href="#">BLOG 4</a></li>
