--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@ official blog</p>
 
 	 
  <div data-role="popup" id="popupSelcBlog" data-theme="d" data-corners="false">
-			<ul data-role="listview" data-inset="true" style="min-width:210px;" data-theme="d" data-corners="false" data-icon="custom">
+			<ul data-role="listview" data-inset="true" style="min-width:210px;" data-theme="d" data-corners="false" data-icon="false">
 					<li><a href="#">BLOG 2</a></li>
 					<li><a href="#">BLOG 3</a></li>
 					<li><a href="#">BLOG 4</a></li>
