--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@
 			<!--page0-->
 			<div class="p" id="blog1-page1" style="position:relative;">
 				<div style="position:absolute; overflow:hidden;">
-					<img id="imgIndexBig3" src="images/articleBig3.jpg" height="100%" width="1200px" style="display:none; min-width:1200px; margin-left:0px;" />
+					<!--<img id="imgIndexBig3" src="images/articleBig3.jpg" height="100%" width="1200px" style="display:none; min-width:1200px; margin-left:0px;" />
 					<img id="imgIndexBig2" src="images/articleBig2.jpg" height="100%" width="1200px" style="display:none; min-width:1200px; margin-left:0px;" />
-					<img id="imgIndexBig1" src="images/articleBig1.jpg" height="100%" width="1200px" style="display:none; min-width:1200px; margin-left:0px;" />
+					<img id="imgIndexBig1" src="images/articleBig1.jpg" height="100%" width="1200px" style="display:none; min-width:1200px; margin-left:0px;" />-->
 					<img id="imgIndexBig0" src="images/articleBig0.jpg" height="100%" width="1200px" style="min-width:1200px; margin-left:0px;" />
 				</div>
 				<div align="right" class="login">
